[package]
name = "lang_tester"
description = "Concise language testing framework for compilers and VMs"
repository = "https://github.com/softdevteam/lang_tester/"
version = "0.3.11"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]
edition = "2018"

[[example]]
name = "rust_lang_tester"
path = "examples/rust_lang_tester/run_tests.rs"

[[example]]
name = "fm_options"
path = "examples/fm_options/run_tests.rs"

[dependencies]
fm = "0.1.2"
getopts = "0.2"
libc = "0.2"
num_cpus = "1.10"
termcolor = "1.0"
threadpool = "1.7"
wait-timeout = "0.2"
walkdir = "2"

[dev-dependencies]
regex = "1.3.9"
tempfile = "3"
